<resources>
    <string name="app_name">pz19</string>
    <string name="save">Coхранить</string>
    <string name="nameHint">Имя</string>
    <string name="stateHint">Статус</string>
    <string name="ageHint">Возраст</string>
    <string name="signIn">Вход</string>
    <string name="loginHint">Логин</string>
    <string name="passwordHint">Пароль</string>
    <string name="goSignIn">Войти</string>
    <string name="NullParametersMessage">Не все поля заполненны!</string>
    <string name="CantSignInMessage">Неверные данные для входа</string>
    <string name="goSignUp">Зарегистрироваться</string>
    <string name="UserExistMessage">Пользователь существует</string>
</resources>